force-app/main/default/objects/Task_Checklist_Setting__mdt/Task_Checklist_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Task Checklist Setting</label>
    <pluralLabel>Task Checklist Settings</pluralLabel>
</CustomObject>