force-app/main/default/objects/Task_Checklist_Setting__mdt/fields/Field_Mapping_Object__c.field-meta.xml
<CustomField>
    <fullName>Field_Mapping_Object__c</fullName>
    <label>Field Mapping Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>