force-app/main/default/objects/Task_Checklist_Setting__mdt/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <label>Help Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>