force-app/main/default/objects/Task_Checklist_Setting__mdt/fields/Picklist_Input_1__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Input_1__c</fullName>
    <inlineHelpText>Enter values, with each value separated by a semicolon</inlineHelpText>
    <label>Picklist Input 1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>