force-app/main/default/objects/Task_Checklist_Setting__mdt/fields/Section_Header__c.field-meta.xml
<CustomField>
    <fullName>Section_Header__c</fullName>
    <label>Section Header</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>