force-app/main/default/objects/Task_Checklist_Setting__mdt/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>72 Hour Check-In</fullName>
            </value>
            <value>
                <fullName>Post Drive Analysis</fullName>
                <default>true</default>
                <label>Post Drive Analysis</label>
            </value>
            <value>
                <fullName>Post Drive FollowUp</fullName>
            </value>
            <value>
                <fullName>Recruitment Planning Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>