force-app/main/default/objects/Task_Checklist_Setting__mdt/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <label>Subtype</label>
    <type>TextArea</type>
</CustomField>