force-app/main/default/objects/Task_Checklist_Setting__mdt/fields/Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Name__c</fullName>
    <label>Unique Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>