force-app/main/default/objects/Task_Checklist_Setting__mdt/listViews/All_Post_Drive_Analysis_Task.listView-meta.xml
<ListView>
    <fullName>All_Post_Drive_Analysis_Task</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Column__c</columns>
    <columns>Order__c</columns>
    <columns>UI_Text__c</columns>
    <columns>Input_Type__c</columns>
    <columns>Unique_Name__c</columns>
    <columns>Input_API_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Subject__c</field>
        <operation>equals</operation>
        <value>Post Drive Analysis</value>
    </filters>
    <label>All Post Drive Analysis Task</label>
    <language>en_US</language>
</ListView>