force-app/main/default/objects/Task_Checklist_Setting__mdt/listViews/New_View.listView-meta.xml
<ListView>
    <fullName>New_View</fullName>
    <columns>MasterLabel</columns>
    <columns>Subject__c</columns>
    <columns>Unique_Name__c</columns>
    <columns>Parent__c</columns>
    <columns>Is_Dynamic__c</columns>
    <columns>Input_Type__c</columns>
    <columns>Input_API_Name__c</columns>
    <columns>Order__c</columns>
    <columns>Column__c</columns>
    <columns>Section_Header__c</columns>
    <columns>Help_Text__c</columns>
    <columns>Hyperlink__c</columns>
    <columns>Subtype__c</columns>
    <columns>UI_Text__c</columns>
    <columns>Picklist_Input_1__c</columns>
    <filterScope>Everything</filterScope>
    <label>New View</label>
    <language>en_US</language>
</ListView>