force-app/main/default/objects/Task_Checklist_Setting__mdt/listViews/X72_Hour_Check_In_Task_Metadata.listView-meta.xml
<ListView>
    <fullName>X72_Hour_Check_In_Task_Metadata</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Column__c</columns>
    <columns>Order__c</columns>
    <columns>UI_Text__c</columns>
    <columns>Help_Text__c</columns>
    <columns>Unique_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Subject__c</field>
        <operation>equals</operation>
        <value>72 Hour Check-In</value>
    </filters>
    <label>72 Hour Check-In Task Metadata</label>
    <language>en_US</language>
</ListView>